[package]
name = "gray_diff"
version = "0.1.0"
authors = ["aka <akatsukisatoshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.3"
regex = "1.5.5"

[[bin]]
name = "abc249_a"
path = "src/abc249_a.rs"

[[bin]]
name = "abc247_a"
path = "src/abc247_a.rs"

[[bin]]
name = "abc247_b"
path = "src/abc247_b.rs"

[[bin]]
name = "abc247_c"
path = "src/abc247_c.rs"
